# m_rust

./: Cargo.toml  Dockerfile  Rocket.toml  compose.yaml  recipe.json
.sqlx/: query-26e7e05427bc7dabcd7815d27764fda2baf4cfe60a2d2d6ee2a1f773dccbbce2.json  query-3cfe949d63b7868dbb4967ecc1927b1570ef8dd93eb6c7102c9b4d6d8c573f2d.json  query-405a494d45ce7d1a748a5fc18858a905d819e6c31d55bb33d0e1ecb66b854927.json  query-45a8dc55a6f8d5913937afa396ddeb15b1148c2854c0484c8e561e8b4db08fe3.json  query-55d159640fd8c1c88f92b4b1741767e0659eec3ae7a6e63fdf960504249541a9.json  query-7d8fd021888363d225bc503d725d08567ecae2007bb1c4ba1d9bc422a65e2bc0.json  query-8aa95d0f67880ebe8f277e4e89e04c36647b3b09d9131b049a60a968400f3a83.json  query-9285c70dca7f17a3f9767c878164d98bd7bcca1746c9426a1f210338ecb84e8c.json  query-a2b1bda75a98b63d8b14c747136a27cafc3c5dde815290e0411a9556a8034c0a.json  query-ba2dd1c87ffdf65b710c2fc17141cf021730c563c46aa77529ec462ee16efe4a.json  query-bf562b2eb9d0aa2731c3ffb4d7fd1dc7e7c095d15cf9ba395cb8e16b09294f54.json  query-c80a2dabe4c2a5630dfabee35937e188ab462199094a2b2168971654be1e2a58.json  query-ccd3f9a6c15cffb60dc2d7fadad92df6e3ffd8dfcc4dca2f6fd4bd411aa25d8d.json  query-d1e16baf9dcea3a6743b6dfce3130a1093a4c7d32fa8fc67e674f0e2454ee27a.json  query-ef14ae7a643ed02b2fc763f8426ea88fb072a0cb663ca2132c50e228b179073c.json  query-fbfddc0fa8107f24e17b5828c68848847e098bc739091cba59637039a326875b.json
migrations/: 20230803075432_create_user_table.up.sql  20230810072357_create_login_cookie_table.down.sql  20230810072357_create_login_cookie_table.up.sql  (+6 more)
src/: main.rs
(+25 files in other folders)
