[package]
name = "m_rust"
version = "0.1.0"
edition = "2021"
rust-version = "1.71.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"
rocket = { version = "0.5.0-rc.3", features = ["tls", "json"] }
serde = "1.0.177"
sqlx = { version = "0.7", features = [
    "runtime-tokio",
    "tls-native-tls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.29.1", features = ["full"] }
uuid = { version = "1.4.1", features = ["v4"] }
